--- a/src/main/resources/templates/administrador/usuario/home.html
+++ b/src/main/resources/templates/administrador/usuario/home.html
@@ -56,12 +56,12 @@
     </div>
     <!-- /.container -->
 
-    <!-- Footer -->
+"    <!-- Footer -->
     <div th:include="administrador/template_admin.html::footer"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>"
 
   </body>
 
