--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -1,13 +1,13 @@
 
 
   <!-- Navigation -->
-  <div th:fragment="header">
+  <div th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
 
 
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" th:href="@{/administrador}">Spring eCommerce</a>
+      <a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
 
       <form class="form-inline my-2 my-lg-0" method="post"
       action="#">
