--- a/src/main/resources/templates/administrador/usuario/carrito.html
+++ b/src/main/resources/templates/administrador/usuario/carrito.html
@@ -54,13 +54,13 @@
                   <th scope="col">Acción</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody th:each="dorden:${cart}">
                 <tr>
-                  <td >Nombre</td>
-                  <td >Precio</td>
-                  <td>Cantidad</td>
-                  <td >Total</td>
-                  <td><a href="#" class="btn btn-danger">Quitar</a></td>
+                  <td th:text="${dorden.nombre}"></td>
+                  <td th:text="${dorden.precio}"></td>
+                  <td th:text="${dorden.cantidad}"></td>
+                  <td th:text="${dorden.total}"></td>
+                  <td><a th:href="@{/delete/cart/{id}(id=${dorden.producto.id})}" class="btn btn-danger">Quitar</a></td>
                 </tr>
               </tbody>
             </table>
@@ -70,7 +70,7 @@
             <h2 class="card-title">SUBTOTAL</h2>
 
             <ul class="list-group">
-              <li class="list-group-item"><h5>Total: $ 10</h5></li>
+              <li class="list-group-item"><h5 th:text="${orden.total}">Total: $ 10</h5></li>
               <a href="resumenorden.html" class="btn btn-dark">Ver Orden</a>
             </ul>
           </div>
@@ -86,6 +86,7 @@
       <!-- Bootstrap core JavaScript -->
       <script th:src="@{vendor/jquery/jquery.min.js}"></script>
       <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+
 </body>
 
-  </html>
+</html>
