--- a/src/main/resources/templates/administrador/usuario/home.html
+++ b/src/main/resources/templates/administrador/usuario/home.html
@@ -43,7 +43,7 @@
               <p class="card-text" th:text="${producto.nombre}"></p>
             </div>
             <div class="card-footer">
-              <a th:href="@{/productohome/{id}(id=${producto.id})}" class="btn btn-success">Ver producto</a>
+              <a th:href="@{/producto/{id}(id=${producto.id})}" class="btn btn-success">Ver producto</a>
             </div>
           </div>
         </div>
@@ -56,12 +56,12 @@
     </div>
     <!-- /.container -->
 
-"    <!-- Footer -->
+    <!-- Footer -->
     <div th:include="administrador/template_admin.html::footer"></div>
 
   <!-- Bootstrap core JavaScript -->
   <script th:src="@{vendor/jquery/jquery.min.js}"></script>
-  <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>"
+  <script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
 
   </body>
 
